--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eta-touchdrv (0.1.1-1) unstable; urgency=medium
+
+  * Upstream solves ohci-hcd problems of AMD IWBs.
+
+ -- Gokhan Karabulut <gokhan.karabulut@tubitak.gov.tr>  Mon, 14 Dec 2015 19:50:58 +0200
+
 eta-touchdrv (0.1.0-1) unstable; urgency=low
 
   * Initial release
