--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eta-touchdrv (0.1.1-3) unstable; urgency=medium
+
+  * Update control file
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Tue, 26 Sep 2017 14:53:47 +0300
+
 eta-touchdrv (0.1.1-2) unstable; urgency=medium
 
   * [a93ceda] Change debian tagging scheme for GitLab errors
