--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eta-touchdrv (0.1.1-4) unstable; urgency=medium
+
+  * Fix dkms build error
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Fri, 14 Sep 2018 11:27:49 +0300
+
 eta-touchdrv (0.1.1-3) unstable; urgency=medium
 
   * Update control file
