--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+eta-touchdrv (0.1.1-6) stable; urgency=medium
+
+  * Pardus CI integration
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Fri, 14 Sep 2018 11:41:59 +0300
+
 eta-touchdrv (0.1.1-5) unstable; urgency=medium
 
   * Update dkms conf
